2016-06-13  c.hetherington  <cth@carlh.net>

	* Add button to move things to the start of reels (#798).

2016-06-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.9 released.

2016-06-07  c.hetherington  <cth@carlh.net>

	* Add tooltips over content channel names in the
	audio mapping view (#888).

	* Re-add option to save DKDMs to a file.

2016-06-06  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-06-05  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2016-06-04  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-06-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.8 released.

2016-06-02  Carl Hetherington  <cth@carlh.net>

	* Fix crash when loading projects from pre-2.8.5.

	* Fix broken content properties under translation.

	* Version 2.8.7 released.

2016-06-01  c.hetherington  <cth@carlh.net>

	* Basics of better audio stream labelling in the audio
	mapping view (#849).

2016-06-01  Carl Hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

2016-05-31  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Version 2.8.6 released.

2016-05-31  Carl Hetherington  <cth@carlh.net>

	* Fix some more incomplete strings in the properties dialogue (#874).

	* Fix crash on opening properties for audio-only files (#881).

	* Remove mention of finding subtitles when examining
	audio-only content (#882).

2016-05-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.5 released.

2016-05-30  Carl Hetherington  <cth@carlh.net>

	* Keep audio dialogue always-on-top (#756).

	* Add Cancel button to custom colour conversion
	dialogue (#880).

	* Give the option to abort the operation when creating
	a new film or opening an existing one (#847).

2016-05-29  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.
