@@ -78,6 +78,8 @@ typedef int64_t Frame;
 enum VideoFrameType
 {
 	VIDEO_FRAME_TYPE_2D,
+	/** `True' 3D content, e.g. 3D DCPs */
+	VIDEO_FRAME_TYPE_3D,
 	VIDEO_FRAME_TYPE_3D_LEFT_RIGHT,
 	VIDEO_FRAME_TYPE_3D_TOP_BOTTOM,
 	VIDEO_FRAME_TYPE_3D_ALTERNATE,
